add AbstractProducerService
