# loan_deal_app/src/main/resources/openapi.yaml
@@ -9,7 +9,7 @@ paths:
   /deal/application:
     post:
       tags:
-        - Application
+        - CreateApplication
       operationId: LoanApplication
       description: Расчёт возможных условий кредита
       requestBody:
@@ -31,7 +31,7 @@ paths:
   /deal/offer:
     put:
       tags:
-        - Offer
+        - ApplyOffer
       operationId: LoanOffer
       description: Выбор одного из предложений
       requestBody:
@@ -46,6 +46,9 @@ paths:
 
   /deal/calculate/{application_id}:
     put:
+      tags:
+        - CalculateDocuments
+      operationId: dealCalculateApplicationIdPut
       summary: Завершение регистрации и подсчёт кредита
       description: Метод для завершения регистрации и получения полной информации о кредите
       parameters:
@@ -70,7 +73,7 @@ paths:
   /deal/document/{applicationId}/send:
     post:
       tags:
-        - CreateDocForSend
+        - CreateDocuments
       description: Create documents
       operationId: CreateDocuments
       parameters:
@@ -84,6 +87,54 @@ paths:
         '200':
           description: Document sent successfully
 
+  /deal/document/{applicationId}/sign:
+    post:
+      tags:
+        - SingDocuments
+      description: Sing documents
+      operationId: SingDocuments
+      parameters:
+      - name: applicationId
+        in: path
+        required: true
+        schema:
+          type: integer
+          format: int64
+      responses:
+        '200':
+          description: Sing successfully
+
+  /deal/document/{applicationId}/code:
+    post:
+      tags:
+        - SendSesCode
+      description: Send SES Code
+      operationId: SendSesCode
+      parameters:
+        - name: applicationId
+          in: path
+          required: true
+          schema:
+            type: integer
+            format: int64
+      requestBody:
+        description: Четырехзначный код для проверки
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                code:
+                  type: integer
+                  format: int64
+                  maximum: 9999
+                  minimum: 1000
+              required:
+                - code
+      responses:
+        '200':
+          description: Send SES Code successfully
 
 components:
   schemas:
